# cashflow-tracker

./: .gitignore  CMakeLists.txt  README.md
apps/cli/: CMakeLists.txt
apps/cli/src/: main.cpp
core/: CMakeLists.txt
core/include/: account.h  currencies.h  id.h  operation.h  transaction.h
core/src/: account.c  operation.c  transaction.c
